ユーザーリスト作成
- ユーザーリスト動作確認
- アニメーションをクラスではなくrefを使った方法に書き換え

--- a/server/resources/sass/TwApps/components/MutedtweetList.scss
+++ b/server/resources/sass/TwApps/components/MutedtweetList.scss
@@ -1,20 +1,20 @@
 
-.muted-tweet-list {
-  // display: none;
-  // height: 0;
-  overflow: hidden;
-  transition: .5s;
-}
+// .muted-tweet-list {
+//   // display: none;
+//   // height: 0;
+//   overflow: hidden;
+//   transition: .5s;
+// }
 
-.tweet-list-open-animation {
-  display: block;
-  height: auto;
-}
+// .tweet-list-open-animation {
+//   display: block;
+//   height: auto;
+// }
 
-.tweet-list-close-animation {
-  display: none;
-  height: 0;
-}
+// .tweet-list-close-animation {
+//   display: none;
+//   height: 0;
+// }
 
 // @keyframes slideDown {
 //   0% {
